# api-ocr

./: .env.example  Dockerfile.cpu  Dockerfile.gpu  README.md  conftest.py  pyproject.toml  requirements.txt  run.sh
app/: __main__.py  config.py  logging.py  main.py
app/models/: schemas.py
app/routers/: health.py  ocr.py
app/services/: backends.py
app/utils/: http.py  pdf.py
docs/: ARCHITECTURE.md
tests/: conftest.py  test_backends.py  test_config.py  test_models_schemas.py  test_pdf_utils.py  test_utils_http.py
