[project]
name = "deepseek-ocr-api"
version = "0.1.0"
description = "Production ready FastAPI wrapper around deepseek-ai/DeepSeek-OCR"
readme = "README.md"
authors = [
  {name = "Antonio"}
]
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0",
  "pydantic[email]>=1.10.13,<2",
  "pydantic-settings>=1.10.0,<2",
  "prometheus-fastapi-instrumentator>=6.1.0",
]

[project.optional-dependencies]
pdf = [
  "pypdfium2>=4.30.0",
  "pillow>=10.0.0",
]
transformers = [
  "transformers>=4.40.0",
  "torch>=2.2.0",
  "accelerate>=0.29.0",
  "flash-attn>=2.7.3; platform_system == 'Linux'",
]
vllm = [
  "vllm-nightly>=0.6.0",
]

develop = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.3.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
testpaths = [
  "tests",
]

[tool.ruff]
line-length = 100
src = ["app"]
select = ["E", "F", "I", "UP", "B"]
